clusters/desire/kipp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kipp
  namespace: kipp
spec:
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: kipp
  template:
    metadata:
      labels:
        app: kipp
    spec:
      containers:
      - name: kipp
        # v0.1.0
        image: uhthomas/kipp@sha256:23960914343a7073d9f59c68e44d11b2057036034522dea2e8bd347cb2e4c831
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        args:
        - --database=$(DATABASE)
        - --filesystem=s3://fr-par/kipp?endpoint=s3.fr-par.scw.cloud
        - --lifetime=0
        resources:
          requests:
            memory: 16Mi
            cpu: 150m
          limits:
            memory: 64Mi
            cpu: 400m
        volumeMounts:
        - name: kipp
          mountPath: /aws-config
          readOnly: true
          subPath: aws-config
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
      volumes:
      - name: kipp
        secret:
          secretName: kipp
