clusters/desire/kipp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kipp
  namespace: kipp
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: kipp
